aws-terraform-foundation/main.tf

terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "~> 5.0"
   }
 }
}

provider "aws" {
  region = var.region
}

#--vpc---
resource "aws_vpc" main {
  cidr_block            = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support    = true


  tags = {
    Name          = "${var.project_name}-vpc"
    Environment   = var.environment
    owner         = var.owner
  }
}



#---Public Subnet---
resource "aws_subnet" "public" {
  vpc_id                     = aws_vpc.main.id
  cidr_block                 = "10.0.1.0/24"
  availability_zone          = "${var.region}a"
  map_public_ip_on_launch    =  true

 tags  = {
   Name              = "${var.project_name}-public subnet"
   Environment       =  var.environment

   }
 }

resource "aws_internet_gateway" "main" {
   vpc_id = aws_vpc.main.id

   tags = {
     Name = "${var.project_name}-igw"
   }
 }

resource "aws_route_table" "public" {
   vpc_id = aws_vpc.main.id

   route {
     cidr_block = "0.0.0.0/0"
     gateway_id = aws_internet_gateway.main.id
   }
   tags = {
    Name = "${var.project_name}-public-rt"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_security_group" "web" {
  name        = "${var.project_name}-sg"
  description = "Allow SSH and HTTP"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-sg"
  }
}

resource "aws_instance" "web" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.web.id]

  tags = {
    Name        = "${var.project_name}-server"
    Environment = var.environment
    Owner       = var.owner
  }
}
